@@ -2,6 +2,8 @@ Version 0.4
  - jmlib: Added patterns.h and patterns.cpp, which parse pattern files
  - data: Added some style data for completeness
  - jmdlx: Added printing mpegs. Thanks to luap for the color stuff.
+ - jmdlx: HUGE list of fixes and changes from arkanes in #wxwidgets
+ - jmdlx: Added Visual Studio build stuff, also arkanes
 
 Version 0.3
 2004-03-17
